feat: make every pressure visitor adaptive
